fixed nav menu padding to be more center and aligned

--- a/themes/inhabitent/sass/_findus.scss
+++ b/themes/inhabitent/sass/_findus.scss
@@ -20,7 +20,8 @@
     display: flex;
     justify-content: space-between;
     padding-left: 10%;
-    padding-right: 10%;
+    padding-right: 4%;
+    margin-top:1%;
   }
 
   .content-area{
