--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -46,7 +46,8 @@ a {
 				display: flex;
 				justify-content: space-between;
 				padding-left:5%;
-				padding-right:5%;
+				padding-right:4%;
+				margin-top:1%;
 				font-family:$headfont;
 			}
 			
